--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 Django==5.2.4
 django-allauth==65.10.0
-django-tailwind==4.2.0
-django-browser-reload==1.18.0
+django-tailwind==4.2.0 # tailwind
+django-browser-reload==1.18.0 # tailwind
+cookiecutter>=1.7.0 # tailwind
+honcho==2.0.0   # tailwind
