--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ django-tailwind==4.2.0 # tailwind
 django-browser-reload==1.18.0 # tailwind
 cookiecutter>=1.7.0 # tailwind
 honcho==2.0.0   # tailwind
+django-cotton==2.1.3 # cotton
