--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ django-browser-reload==1.18.0 # tailwind
 cookiecutter>=1.7.0 # tailwind
 honcho==2.0.0   # tailwind
 django-cotton==2.1.3 # cotton
+# jinja2==3.1.6
