--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ cookiecutter>=1.7.0 # tailwind
 honcho==2.0.0   # tailwind
 django-cotton==2.1.3 # cotton
 # jinja2==3.1.6
+django-debug-toolbar==6.0.0 # debug-toolbar
