--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ honcho==2.0.0   # tailwind
 django-cotton==2.1.3 # cotton
 # jinja2==3.1.6
 django-debug-toolbar==6.0.0 # debug-toolbar
+django-admin-sortable2==2.2.8 #admin-sortable2
