--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,4 @@ django-cotton==2.1.3 # cotton
 # jinja2==3.1.6
 django-debug-toolbar==6.0.0 # debug-toolbar
 django-admin-sortable2==2.2.8 #admin-sortable2
+django-extensions==4.1 # this is for things like orm query
